# piqel

./: .editorconfig  .gitmodules  Cargo.toml  Makefile.toml  README  README.md  tests-make.toml
.github/workflows/: on_PR_closing.yml  release-pq-cargodist.yml  release.yml
_readme/: README.html  README.md
docs/: README.gfm.md  README.html  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-old/: README.gfm.md  README.html  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-old/docs/js/: 01.md
docs-old/docs/pq/: 01.md
docs-old/docs/py/: 01.md
docs-old/docs/rs/: 01.md  02.md
docs-old/src/pages/: index.js
docs/docs/: index.md
docs/docs/pq/: 01.md  02.md
docs/docs/py/: 01.md
docs/docs/rs/: 01.md  02.md
docs/src/pages/: index.js
examples/: S.rs  bat.rs  calc.rs  csv.rs  de.rs  e.rs  ee.rs  eee.rs  eeee.rs  eeeee.rs  eval.rs  list.rs  math.rs  mm.rs  models.rs  parse.rs  parse_sql.rs  parser.rs  poke.rs  pp.rs  pq.rs  pq1.rs  pqlon.rs  product.rs  q1.rs  q2.rs  q3.rs  qq.rs  r2.rs  r3.rs  rayon.rs  recolist.rs  s1.rs  s2.rs  select_env.rs  select_ip.rs  sql.rs  tables_records_list.rs  utils.rs  vec.rs
examples/next/: .eslintrc.js  next.config.js  package-lock.json  package.json  partiql-js  tsconfig.json
examples/next/src/components/: Header.tsx
examples/next/src/models/: ogp.ts
examples/next/src/pages/: index.tsx
examples/next/src/pages/api/: hello.ts  pokemon.ts
examples/next/src/plugins/: debug.tsx  env.ts
examples/next/src/utils/: index.ts  pi.ts
examples/next/src/views/: Home.tsx
examples/nextjs/: package.json  pnpm-lock.yaml  server.js
examples/nextjs/pages/api/: partiql.ts
examples/nodejs/: README.md  package.json  pnpm-lock.yaml
examples/nodejs/src/: index.mjs
examples/python/: pyproject.toml
examples/python/notes/: samples.py
examples/python/tests/: test_piqel_py_examples.py
examples/rust/: Cargo.toml  README.md
examples/rust/examples/: samples.rs
examples/with_actix/: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.dev.yml  docker-compose.yml
examples/with_actix/examples/: sql.rs
examples/with_actix/src/: main.rs
partiql-js/: Cargo.toml  Makefile.toml  README.md
partiql-js/src/: lib.rs
partiql-py/: .gitignore  Cargo.toml  Makefile.toml  README.md  pyproject.toml
partiql-py/partiql/: __init__.py
partiql-py/src/: lib.rs
partiql-py/tests/: test_partiql.py
partiqlx/: .editorconfig  Dockerfile  README.md  schema.sql
piqel-js/: Cargo.toml  LICENSE_MIT  Makefile.toml  README.md
piqel-js/examples/nodejs/: package.json  pnpm-lock.yaml
piqel-js/examples/nodejs/src/: index.js
piqel-js/src/: lib.rs
piqel-py/: Cargo.toml  Makefile.toml  README.md  pyproject.toml
piqel-py/piqel/: __init__.py
piqel-py/src/: lib.rs
piqel-py/tests/: test_partiql.py  test_piqel.py
samples/: ip_addr.json  mew-c.json  mew.json  package.json  pokemon.json  pokemons.json  q1.json  q10.json  q11.json  q12.json  q13.json  q15.json  q17.json  q18.json  q2.json  q2.sql  q3.json  q4.json  q5.json  q6.json  q7.json  q8.json  q9.json  tabs.json  testTypes.env
src/lib/: dsql_parser.rs  engine.rs  lang.rs  mod.rs  models.rs  parser.rs  pqlir_parser.rs  pqlon_parser.rs  sql.rs  sql_parser.rs
src/lib/parser/: clauses.rs  elements.rs  expressions.rs  func.rs  keywords.rs  math.rs  mod.rs  select_statement.rs  uri.rs  values.rs
src/lib/planner/: drain.rs  eval.rs  filter.rs  logical_plan.rs  mod.rs  project.rs
src/lib/sql/: bindings.rs  bingings.rs  env.rs  eval.rs  expr.rs  field.rs  filter.rs  func.rs  mod.rs  path.rs  plan.rs  proj.rs  selector.rs  sql.rs  utils.rs  where_cond.rs
src/lib/sql/parser/: func.rs  math.rs  mod.rs
src/lib/utils/: mod.rs
src/lib/value/: json.rs  json_value.rs  mod.rs  partiql.rs  pql_value.rs  pql_vector.rs  table.rs  toml_value.rs
tests/: de_value.rs  eval_sql.rs  math.rs  parse_sql.rs  parser.rs  pqlir.rs  se_value.rs  sql.rs  sql_parser.rs
tests-make/: convert.toml  float.toml  index.toml  package-json.toml  pokemon.toml  se_csv.toml  se_toml.toml  select_addr.toml  select_env.toml  select_ip.toml  tutorial.toml  web.toml
tests/pq/: convert.mjs  float.mjs  just_select.mjs  package_json.mjs  poke.mjs  random.mjs  se_csv.mjs  se_toml.mjs  select_addr.mjs  select_env.mjs  select_ip.mjs
