[package]
name = "piqel"
version = "0.202107.5"
edition = "2018"
description = "A implementation of PartiQL"
homepage = "https://github.com/fuyutarow/piqel"
repository = "https://github.com/fuyutarow/piqel.git"
authors = ["FUKUDA Yutaro <fuyutarow@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["database", "parsing", "parser-implementations"]
keywords = ["PartiQL", "SQL"]

[lib]
name = "piqel"
path = "src/lib/mod.rs"

[[bin]]
name = "pq"
path = "src/bin/pq.rs"
required-features = ["cli"]

[dependencies]
polars = { version = "0.14.2", features = ["json"], optional = true }
anyhow = "1.0.40"
atty = "0.2.14"
bat = { version = "0.18.1", optional = true }
collect-mac = "0.1.0"
indexmap = { version = "1.6.2", features = ["serde"] }
itertools = "0.10.0"
nom = "6.1.2"
ordered-float = { version = "2.0", default-features = false, features = [
	"serde",
] }
parse-display = "0.5.0"
quick-xml = { version = "0.22.0", features = ["serialize"] }
regex = "1.5.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde_yaml = "0.8.17"
serde_partiql = "1.1.64"
structopt = { version = "0.3.21", optional = true }
toml = "0.5.8"
rayon = "1.5"
chrono = { version = "0.4.19", features = ["serde"] }


[features]
table = ["polars"]
cli = ["bat", "structopt"]
default = []
