[package]
name = "partiql"
version = "0.202106.5"
edition = "2018"
description = "A implementation of PartiQL"
homepage = "https://github.com/fuyutarow/partiql-rs"
repository = "https://github.com/fuyutarow/partiql-rs.git"
authors = ["FUKUDA Yutaro <fuyutarow@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["database", "parsing", "parser-implementations"]
keywords = ["partiql"]

[lib]
name = "partiql"
crate-type = ["cdylib"]

[dependencies]
dict_derive = "0.3.1"
partiql-rs = { path=".." }
pyo3 = { version="0.13.2", features=["extension-module"] }

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
