[package]
name = "partiql-rs"
version = "0.202106.7"
edition = "2018"
description = "A implementation of PartiQL"
homepage = "https://github.com/fuyutarow/partiql-rs"
repository = "https://github.com/fuyutarow/partiql-rs.git"
authors = ["FUKUDA Yutaro <fuyutarow@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["database", "parsing", "parser-implementations"]
keywords = ["partiql"]

[lib]
name = "partiql"
crate-type = ["cdylib"]

[dependencies]
partiql-rs = { path="..", features=["table"] }
pyo3 = { version="0.13.2", features=["extension-module"] }
