[tool.poetry]
name = "partiql-tests"
version = "0.1.0"
description = ""
authors = ["fuyutarow <fuyutarow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
partiql = {path = "target/wheels/partiql-0.202106.5-cp39-cp39-linux_x86_64.whl"}

[tool.maturin]
bindings = "cffi"
manylinux = "off"
