[tool.poetry]
name = "partiql"
version = "0.1.0"
description = ""
authors = ["fuyutarow <fuyutarow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
maturin = "^0.10.6"
black = {version = "^21.6b0", allow-prereleases = true}

[tool.maturin]
bindings = "cffi"
manylinux = "off"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
