[package]
name = "piqel"
version = "0.202107.1"
edition = "2018"
description = "A implementation of PartiQL"
homepage = "https://github.com/fuyutarow/piqel"
repository = "https://github.com/fuyutarow/piqel.git"
authors = ["FUKUDA Yutaro <fuyutarow@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["database", "parsing", "parser-implementations"]
keywords = ["partiql"]

[lib]
name = "partiql"
crate-type = ["cdylib"]

[dependencies]
piqel = { path="..", features=["table"] }
pyo3 = { version="0.13.2", features=["extension-module"] }
pyo3-built = "0.4.5"
pyo3-chrono = "0.1.0"
pythonize = "0.13.0"
