[package]
authors = ["FUKUDA Yutaro <fuyutarow@gmail.com>"]
categories = ["database", "parsing", "parser-implementations"]
description = "A implementation of PartiQL"
edition = "2018"
homepage = "https://github.com/fuyutarow/piqel"
keywords = ["PartiQL", "SQL"]
license = "MIT"
name = "piqel"
readme = "README.md"
repository = "https://github.com/fuyutarow/piqel.git"
version = "0.202208.0"

[lib]
crate-type = ["cdylib"]
name = "piqel"

[dependencies]
piqel = {path = "..", features = ["table"]}
pyo3 = {version = "0.13.2", features = ["extension-module"]}
pyo3-built = "0.4.5"
pyo3-chrono = "0.1.0"
pythonize = "0.13.0"
