[tool.poetry]
authors = ["fuyutarow <fuyutarow@gmail.com>"]
description = ""
name = "piqel"
version = "0.1.0"

[tool.poetry.dependencies]
pandas = "^1.2.5"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}
maturin = "^0.10.6"
poetry = "^1.1.14"
pytest = "^7.1.2"

[tool.maturin]
bindings = "cffi"
manylinux = "off"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
line-length = 100
