[tool.poetry]
authors = ["fuyutarow <fuyutarow@gmail.com>"]
description = ""
name = "piqel-py-examples"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
piqel = "^0.202208.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
ipykernel = "^6.15.1"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
