[package]
name = "partiqlx"
version = "0.202106.0"
authors = ["fuyutarow <fuyutarow@gmail.com>"]
edition = "2018"

# [[bin]]
# name = "show_posts"
# path = "bin/show_posts.rs"

[dependencies]
# depends on actix-rt^1.1.1
actix-web = "3.3.2"
anyhow = "1.0.41"
chrono = "0.4.19"
lazy_static = "1.4.0"
once_cell = "1.8.0"
partiql-rs = { path = ".." }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
# actix-rt^1.1.1 requires tokio^0.2.6 and sqlx^0.4.2 requires tokio^0.2.21 but sqlx>=0.5 requires tokio>=1.1
sqlx = { version="0.4", features=["runtime-tokio-rustls", "postgres", "chrono"] }
